K8s/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: hashicorp/http-echo
          args:
            - "-text=Hello from wildcard test app"
          ports:
            - containerPort: 5678
