K8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: test-service
spec:
  type: LoadBalancer
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 5678
