K8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wildcard-gateway
  namespace: gateway-system
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.cybersyntric.online"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-cybersyntric-tls
      allowedRoutes:
        namespaces:
          from: All
