K8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wildcard-route
  namespace: default
spec:
  parentRefs:
    - name: wildcard-gateway
      namespace: gateway-system
  hostnames:
    - "*.cybersyntric.online"
  rules:
    - backendRefs:
        - name: test-service
          port: 80
